[gd_scene load_steps=6 format=3 uid="uid://docubqi5oace5"]

[ext_resource type="Script" uid="uid://cpsxxgt73gti0" path="res://scenes/title_screen/intro_text.gd" id="1_k0y6h"]
[ext_resource type="FontFile" uid="uid://dsb6338jj88k8" path="res://assets/fonts/Planes_ValMore.ttf" id="2_sehxf"]

[sub_resource type="Gradient" id="Gradient_4qj35"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_k0y6h"]
gradient = SubResource("Gradient_4qj35")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_povan"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(180, 180, 1)
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_k0y6h")

[node name="IntroText" type="Node"]
script = ExtResource("1_k0y6h")

[node name="Black BG Color" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Particle Effect" type="GPUParticles2D" parent="."]
position = Vector2(152, 80)
scale = Vector2(1.1074, 1.1074)
amount = 100
process_material = SubResource("ParticleProcessMaterial_povan")

[node name="Label" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_sehxf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="next_char" type="Timer" parent="."]

[node name="next_message" type="Timer" parent="."]

[connection signal="timeout" from="next_char" to="." method="_on_next_char_timeout"]
[connection signal="timeout" from="next_message" to="." method="_on_next_message_timeout"]
